# flow

./: CLAUDE.md  Cargo.toml  README.md  RELEASE-NOTES.md  flow-phases.json  hello.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: adversarial.md  documentation.md  learn-analyst.md  pre-mortem.md  reviewer.md
docs/: index.html
owlwatch_demo/: config.rs
owlwatch_probe/: pr_probe.rs
src/: add_skipped_agent.rs  analyze_issues.rs  capture_diff.rs  ci.rs  cleanup.rs  clear_halt.rs  complete_fast.rs  complete_finalize.rs  complete_post_merge.rs  complete_preflight.rs  cwd_scope.rs  delete_body_file.rs  finalize_commit.rs  flow_paths.rs  format_complete_summary.rs  github.rs  issue.rs  lib.rs  lock.rs  main.rs  merge_approval.rs  per_flow_capture.rs  phase_anchor.rs  phase_config.rs  phase_enter.rs  phase_finalize.rs  phase_transition.rs  plan_deviation.rs  plan_from_issue.rs  prime_check.rs  prime_setup.rs  promote_permissions.rs  record_agent_return.rs  render_pr_body.rs  required_agents.rs  resolve_skill_mode.rs  session_metrics.rs  start_gate.rs  start_init.rs  start_workspace.rs  (+6 more)
tests/: add_finding.rs  add_issue.rs  add_skipped_agent.rs  agent_grep_tool_present.rs  analyze_issues.rs  append_note.rs  bin_reset.rs  bin_test.rs  capture_diff.rs  check_phase.rs  ci.rs  cleanup.rs  clear_halt.rs  complete_fast.rs  complete_finalize.rs  complete_post_merge.rs  complete_preflight.rs  concurrency.rs  cwd_scope.rs  delete_body_file.rs  dispatcher.rs  docs_sync.rs  finalize_commit.rs  flow_paths.rs  format_complete_summary.rs  github.rs  (+44 more)
(+161 files in other folders)
