[package]
name = "flow-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "flow_rs"
path = "src/lib.rs"

[[bin]]
name = "flow-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
ratatui = "0.29"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.crossterm]
version = "0.28"

[dev-dependencies]
filetime = "0.2"
serde_yaml = "0.9"
tempfile = "3"
